--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -65,8 +65,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-medium"
-                    android:hint="Mobile Number"
-                    android:inputType="phone" />
+                    android:hint="@string/email"
+                    android:inputType="textEmailAddress" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -97,8 +97,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/txt_signUp"
@@ -107,6 +106,7 @@
                     android:layout_weight="2"
                     android:fontFamily="sans-serif-medium"
                     android:text="@string/signup"
+                    android:visibility="gone"
                     android:textAlignment="textStart"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
